// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fallingEdge (float) > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "fallingEdgeFloat",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "float",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "memoryAddress": {
          "byteAddress": 4,
          "memoryId": "output",
          "safeByteLength": 4,
          "source": "memory-start",
        },
        "type": "literal",
        "value": 4,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "fallingEdge",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [],
    "ifBlock": {
      "hasElse": true,
      "matchingIfEndIndex": 10,
      "resultType": "int",
    },
    "instruction": "if",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "else",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 0,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "int",
      },
    ],
    "ifEndBlock": {
      "matchingIfIndex": 6,
      "resultType": "int",
    },
    "instruction": "ifEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 12,
    "lineNumberBeforeMacroExpansion": 12,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 13,
    "lineNumberBeforeMacroExpansion": 13,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 15,
    "lineNumberBeforeMacroExpansion": 15,
  },
]
`;

exports[`fallingEdge (float) > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local f32)
    i32.const 4
    i32.const 0
    f32.load
    local.set 0
    local.get 0
    i32.const 8
    f32.load
    f32.lt
    if (result i32)  ;; label = @1
      i32.const 1
    else
      i32.const 0
    end
    i32.const 8
    local.get 0
    f32.store
    if (result i32)  ;; label = @1
      i32.const 1
    else
      i32.const 0
    end
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`fallingEdge (float) > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`fallingEdge > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "fallingEdge",
      },
    ],
    "instruction": "module",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 0,
    "lineNumberBeforeMacroExpansion": 0,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 2,
    "lineNumberBeforeMacroExpansion": 2,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "isMemoryDeclaration": true,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "memoryAddress": {
          "byteAddress": 4,
          "memoryId": "output",
          "safeByteLength": 4,
          "source": "memory-start",
        },
        "type": "literal",
        "value": 4,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  {
    "arguments": [],
    "instruction": "fallingEdge",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 7,
    "lineNumberBeforeMacroExpansion": 7,
  },
  {
    "arguments": [],
    "ifBlock": {
      "hasElse": true,
      "matchingIfEndIndex": 10,
      "resultType": "int",
    },
    "instruction": "if",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 8,
    "lineNumberBeforeMacroExpansion": 8,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  {
    "arguments": [],
    "instruction": "else",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 10,
    "lineNumberBeforeMacroExpansion": 10,
  },
  {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 0,
      },
    ],
    "instruction": "push",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 11,
    "lineNumberBeforeMacroExpansion": 11,
  },
  {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "int",
      },
    ],
    "ifEndBlock": {
      "matchingIfIndex": 6,
      "resultType": "int",
    },
    "instruction": "ifEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 12,
    "lineNumberBeforeMacroExpansion": 12,
  },
  {
    "arguments": [],
    "instruction": "store",
    "isMemoryDeclaration": false,
    "isSemanticOnly": false,
    "lineNumberAfterMacroExpansion": 13,
    "lineNumberBeforeMacroExpansion": 13,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "isMemoryDeclaration": false,
    "isSemanticOnly": true,
    "lineNumberAfterMacroExpansion": 15,
    "lineNumberBeforeMacroExpansion": 15,
  },
]
`;

exports[`fallingEdge > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (import "js" "memory" (memory (;0;) 1))
  (func (;0;) (type 0)
    (local i32)
    i32.const 4
    i32.const 0
    i32.load
    local.set 0
    local.get 0
    i32.const 8
    i32.load
    i32.lt_s
    if (result i32)  ;; label = @1
      i32.const 1
    else
      i32.const 0
    end
    i32.const 8
    local.get 0
    i32.store
    if (result i32)  ;; label = @1
      i32.const 1
    else
      i32.const 0
    end
    i32.store)
  (export "test" (func 0)))
"
`;

exports[`fallingEdge > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "input": {
    "byteAddress": 0,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 0,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;
